--- a/index.html
+++ b/index.html
@@ -1029,6 +1029,49 @@ Knowing all this, if there are some people who continue living a normal, money-m
  </p>
  </section>
 
+  <section>
+  <h2>ازخودگذشتگی برای خدا و یقین</h2>
+     
+  <p>
+  إِنَّهُ مَنْ يَأْتِ رَبَّهُ مُجْرِماً فَإِنَّ لَهُ جَهَنَّمَ لا يَمُوتُ فِيها وَ لا يَحْيى‏ (۷۴) وَ مَنْ يَأْتِهِ مُؤْمِناً قَدْ عَمِلَ الصَّالِحاتِ فَأُولئِكَ لَهُمُ الدَّرَجاتُ الْعُلى‏ (۷۵) جَنَّاتُ عَدْنٍ تَجْرِي مِنْ تَحْتِهَا الْأَنْهارُ خالِدِينَ فِيها وَ ذلِكَ جَزاءُ مَنْ تَزَكَّى (۷۶)
+<br>
+این صحبت‌ها از کدام پیامبر است؟
+<br>
+این صحبت‌های پیامبرگونه در توصیف بهشت و جهنم از سحره هست وقتی که ایمان آوردند در مقابل فرعون. افرادی که چند ساعت یا شاید چند دقیقه قبل در حال وعده گرفتن از فرعون بودند برای شکست موسی (ع).
+<br>
+---------------
+<br>
+يا قَوْمِ إِنَّما هذِهِ الْحَياةُ الدُّنْيا مَتاعٌ وَ إِنَّ الْآخِرَةَ هِيَ دارُ الْقَرارِ (۳۹) مَنْ عَمِلَ سَيِّئَةً فَلا يُجْزى‏ إِلاَّ مِثْلَها وَ مَنْ عَمِلَ صالِحاً مِنْ ذَكَرٍ أَوْ أُنْثى‏ وَ هُوَ مُؤْمِنٌ فَأُولئِكَ يَدْخُلُونَ الْجَنَّةَ يُرْزَقُونَ فِيها بِغَيْرِ حِسابٍ (۴۰) وَ يا قَوْمِ ما لِي أَدْعُوكُمْ إِلَى النَّجاةِ وَ تَدْعُونَنِي إِلَى النَّارِ (۴۱) تَدْعُونَنِي لِأَكْفُرَ بِاللَّـهِ وَ أُشْرِكَ بِهِ ما لَيْسَ لِي بِهِ عِلْمٌ وَ أَنَا أَدْعُوكُمْ إِلَى الْعَزِيزِ الْغَفَّارِ (۴۲) لا جَرَمَ أَنَّما تَدْعُونَنِي إِلَيْهِ لَيْسَ لَهُ دَعْوَةٌ فِي الدُّنْيا وَ لا فِي الْآخِرَةِ وَ أَنَّ مَرَدَّنا إِلَى اللَّـهِ وَ أَنَّ الْمُسْرِفِينَ هُمْ أَصْحابُ النَّارِ (۴۳) فَسَتَذْكُرُونَ ما أَقُولُ لَكُمْ وَ أُفَوِّضُ أَمْرِي إِلَى اللَّـهِ إِنَّ اللَّهَ بَصِيرٌ بِالْعِبادِ (۴۴)
+<br>
+این صحبت‌ها از کدام پیامبر است؟
+<br>
+این صحبت‌های پیامبرگونه که مشتمل بر توصیف بهشت و جهنم هست از مومن آل فرعون هست که وقتی دید دارن تصمیم میگیرن موسی (ع) رو بکشن، دیگه مخفی کردن ایمانش رو کنار گذاشت و به صراحت شروع به دفاع کردن از موسی (ع) کرد و ایمانش رو آشکار کرد.
+<br>
+---------------
+<br>
+ هنگام مقابله حضرت ابراهیم (ع) نو/جوان با قومش، ایشون به صورت ناگهانی روی صحبتشون رو از مردم به سمت خدا میکنن و بعد شروع به توصیف بهشت و جهنم میکنن. این قسمت سوره شعراء در مورد حضرت ابراهیم (ع) رو مقایسه کنید با قطعات دیگه در مورد پیامبران دیگه. که همه ترجیع بند إِنَّ فِي ذَٰلِكَ لَآيَةً ۖ وَمَا كَانَ أَكْثَرُهُم مُّؤْمِنِينَ۶۷ وَإِنَّ رَبَّكَ لَهُوَ الْعَزِيزُ الرَّحِيمُ۶۸ دارن. در قسمت ابراهیم (ع) ماجرا متفاوت هست.
+<br>
+وَاتْلُ عَلَيْهِمْ نَبَأَ إِبْرَاهِيمَ ‎﴿٦٩﴾‏ إِذْ قَالَ لِأَبِيهِ وَقَوْمِهِ مَا تَعْبُدُونَ ‎﴿٧٠﴾‏ قَالُوا نَعْبُدُ أَصْنَامًا فَنَظَلُّ لَهَا عَاكِفِينَ ‎﴿٧١﴾‏ قَالَ هَلْ يَسْمَعُونَكُمْ إِذْ تَدْعُونَ ‎﴿٧٢﴾‏ أَوْ يَنفَعُونَكُمْ أَوْ يَضُرُّونَ ‎﴿٧٣﴾‏ قَالُوا بَلْ وَجَدْنَا آبَاءَنَا كَذَٰلِكَ يَفْعَلُونَ ‎﴿٧٤﴾‏ قَالَ أَفَرَأَيْتُم مَّا كُنتُمْ تَعْبُدُونَ ‎﴿٧٥﴾‏ أَنتُمْ وَآبَاؤُكُمُ الْأَقْدَمُونَ ‎﴿٧٦﴾‏ فَإِنَّهُمْ عَدُوٌّ لِّي إِلَّا رَبَّ الْعَالَمِينَ ‎﴿٧٧﴾‏ الَّذِي خَلَقَنِي فَهُوَ يَهْدِينِ ‎﴿٧٨﴾‏ وَالَّذِي هُوَ يُطْعِمُنِي وَيَسْقِينِ ‎﴿٧٩﴾‏ وَإِذَا مَرِضْتُ فَهُوَ يَشْفِينِ ‎﴿٨٠﴾‏ وَالَّذِي يُمِيتُنِي ثُمَّ يُحْيِينِ ‎﴿٨١﴾‏ وَالَّذِي أَطْمَعُ أَن يَغْفِرَ لِي خَطِيئَتِي يَوْمَ الدِّينِ ‎﴿٨٢﴾‏ رَبِّ هَبْ لِي حُكْمًا وَأَلْحِقْنِي بِالصَّالِحِينَ ‎﴿٨٣﴾‏ وَاجْعَل لِّي لِسَانَ صِدْقٍ فِي الْآخِرِينَ ‎﴿٨٤﴾‏ وَاجْعَلْنِي مِن وَرَثَةِ جَنَّةِ النَّعِيمِ ‎﴿٨٥﴾‏ وَاغْفِرْ لِأَبِي إِنَّهُ كَانَ مِنَ الضَّالِّينَ ‎﴿٨٦﴾‏ وَلَا تُخْزِنِي يَوْمَ يُبْعَثُونَ ‎﴿٨٧﴾‏ يَوْمَ لَا يَنفَعُ مَالٌ وَلَا بَنُونَ ‎﴿٨٨﴾‏ إِلَّا مَنْ أَتَى اللَّهَ بِقَلْبٍ سَلِيمٍ ‎﴿٨٩﴾‏ وَأُزْلِفَتِ الْجَنَّةُ لِلْمُتَّقِينَ ‎﴿٩٠﴾‏ وَبُرِّزَتِ الْجَحِيمُ لِلْغَاوِينَ ‎﴿٩١﴾‏ وَقِيلَ لَهُمْ أَيْنَ مَا كُنتُمْ تَعْبُدُونَ ‎﴿٩٢﴾‏ مِن دُونِ اللَّهِ هَلْ يَنصُرُونَكُمْ أَوْ يَنتَصِرُونَ ‎﴿٩٣﴾‏ فَكُبْكِبُوا فِيهَا هُمْ وَالْغَاوُونَ ‎﴿٩٤﴾‏ وَجُنُودُ إِبْلِيسَ أَجْمَعُونَ ‎﴿٩٥﴾‏ قَالُوا وَهُمْ فِيهَا يَخْتَصِمُونَ ‎﴿٩٦﴾‏ تَاللَّهِ إِن كُنَّا لَفِي ضَلَالٍ مُّبِينٍ ‎﴿٩٧﴾‏ إِذْ نُسَوِّيكُم بِرَبِّ الْعَالَمِينَ ‎﴿٩٨﴾‏ وَمَا أَضَلَّنَا إِلَّا الْمُجْرِمُونَ ‎﴿٩٩﴾‏ فَمَا لَنَا مِن شَافِعِينَ ‎﴿١٠٠﴾‏ وَلَا صَدِيقٍ حَمِيمٍ ‎﴿١٠١﴾‏ فَلَوْ أَنَّ لَنَا كَرَّةً فَنَكُونَ مِنَ الْمُؤْمِنِينَ ‎﴿١٠٢﴾‌‌‏
+<br>
+در سوره انعام در مورد این تقابل داریم که
+<br>
+وَإِذْ قَالَ إِبْرَاهِيمُ لِأَبِيهِ آزَرَ أَتَتَّخِذُ أَصْنَامًا آلِهَةً ۖ إِنِّي أَرَاكَ وَقَوْمَكَ فِي ضَلَالٍ مُّبِينٍ ‎﴿٧٤﴾‏ وَكَذَٰلِكَ نُرِي إِبْرَاهِيمَ مَلَكُوتَ السَّمَاوَاتِ وَالْأَرْضِ وَلِيَكُونَ مِنَ الْمُوقِنِينَ ‎﴿٧٥﴾
+<br>
+---------------
+<br>
+الگویی که مشاهده میشه اینه که افرادی یک ازخودگذشتگی بزرگ برای خدا میکنن و پس از اون شروع میکنن به صحبتهای خیلی متعالی و به طور خاص توصیفاتی از بهشت و جهنم.
+<br>
+درواقع به نظر میاد که با اون ازخودگذشتگی بزرگ برای خدا به درجه‌ای از «یقین» میرسن. همونطور که به صراحت در مورد ابراهیم (ع) در اون آیات سوره انعام میفرماید لِيَكُونَ مِنَ الْمُوقِنِينَ.
+<br>
+به توصیفات دقت کنیم خیلی تصویری-شهودی هستن. بالاخص در مورد حضرت ابراهیم (ع) که دعوای اهل جحیم رو گزارش میکنن.
+<br>
+و میدونیم که كَلَّا لَوْ تَعْلَمُونَ عِلْمَ الْيَقِينِ ‎﴿٥﴾‏ لَتَرَوُنَّ الْجَحِيمَ ‎﴿٦﴾‏
+<br>
+پ.ن. روایت مشهوری هست که پیامبر (ص) یکی از یارانشون که حال خوبی داشت رو دیدن، ازش پرسیدن چطوری؟ پاسخ داد در حال یقینم. فرمودن نشونه‌ش چیه؟ گفت: بهشتیا رو توی بهشت و جهنمیا رو توی جهنم میبینم. پیامبر (ص) فرمودن همینقدر کافیه، دیگه چیزی نگو.
+
+</p>
+ </section>
+
 
 </body>
 </html>
