--- a/index.html
+++ b/index.html
@@ -1072,6 +1072,11 @@ Knowing all this, if there are some people who continue living a normal, money-m
 </p>
  </section>
 
+  <section>
+    <h2>ابتدا و انتهای سوره مریم</h2>
+    <p>سوره مریم با ‌کر و زکریا شرع میشه و با رکزا تمام میشه.</p>
+  </section>
+
 
 </body>
 </html>
