--- a/index.html
+++ b/index.html
@@ -1074,7 +1074,7 @@ Knowing all this, if there are some people who continue living a normal, money-m
 
   <section>
     <h2>ابتدا و انتهای سوره مریم</h2>
-    <p>سوره مریم با ‌کر و زکریا شرع میشه و با رکزا تمام میشه.</p>
+    <p>سوره مریم با ‌ذکر و زکریا شرع میشه و با رکزا تمام میشه.</p>
   </section>
 
 
