Add discussion on قوم لوط and their beliefs
Added a new section discussing the قوم لوط and their beliefs, including arguments and evidence supporting the claim of their lack of significant ideological deviation.

--- a/index.html
+++ b/index.html
@@ -1078,5 +1078,43 @@ Knowing all this, if there are some people who continue living a normal, money-m
   </section>
 
 
+<section>
+    <h2>قوم لوط</h2>
+    <p>
+در این متن میخواهم ادعایی رو مطرح کنم که تا حالا جایی ندیده‌ام و شاید مقداری سورپرایز باشد. من سعی کردم با دقت بررسی کنم و چون جایی چنین چیزی ندیده بودم بیش از یک سال صبر کردم و در موردش بررسی کردم و در این مدت فقط شواهد به نفعش بیشتر شد. ولی باز جهت احتیاط خودتون هم روش فکر کنید و بررسی کنید.
+<br>
+یک مجموعه از اقوام هستن که در قرآن مکرر بهشون اشاره شده: <br>
+۱-قوم نوح <br>
+۲-قوم عاد (حضرت هود (ع))<br>
+۳- قوم ثمود (حضرت صالح (ع))<br>
+۴- قوم ابراهیم<br>
+۵- قوم لوط<br>
+۶- مدین و ایکه (حضرت شعیب (ع))<br>
+
+ادعا این است: قوم لوط (ع) برخلاف اقوام دیگر انحراف تئوریک/اعتقادی (شدید) نداشته‌اند، انحرافشان (صرفا) عملی بوده است.
+<br>
+شواهد:
+<br>
+۱- هیچ جا در قرآن به قوم لوط تذکر اعتقادی داده نمیشود. به طور خاص توجه کنیم به سوره اعراف و سوره هود که در آن لیست اقوام فوق به همین ترتیب (زمانی) آمده و برای همه عبارتی مثل "اعْبُدُوا اللَّهَ مَا لَكُم مِّنْ إِلَٰهٍ غَيْرُهُ" آمده چه قبل از قوم لوط و چه بعد از آن. ولی برای قوم لوط چنین عبارتی نیامده و فقط به عملشان اعتراض شده است.
+<br>
+۲- در مجادلات حضرت لوط (ع) با قومش میفرماید "إِنِّي لِعَمَلِكُم مِّنَ الْقَالِينَ". مقایسه کنیم با مجادله حضرت ابراهیم (ع) با قومش که میفرمایند "إِنَّا بُرَآءُ مِنكُمْ وَمِمَّا تَعْبُدُونَ مِن دُونِ اللَّهِ". در اولی پیامبر میفرمایند من معترض/دشمن "عمل شما" هستم. در دومی پیامبر میفرمایند من از "شما" و از آنچه غیر از خدا میپرستید بیزارم.
+<br>
+۳- در سوره قمر پس از عذاب هر یک از اقوام فوق میفرماید "فَكَيْفَ كَانَ عَذَابِي وَنُذُرِ" که مخاطب خواننده قرآن/پیامبر (ص) است. ولی وقتی به قوم لوط میرسد میفرماید "فَذُوقُوا عَذَابِي وَنُذُرِ"؛ خود خداوند قوم لوط را مخاطب قرار میدهد. در حالی که در قرآن هیچ جا خداوند کفار و مشرکین را مخاطب قرار نمیدهد (جایی که صراحت داشته باشد که خطاب از جانب خداوند است و نه ملائکه یا ...).
+<br>
+پ.ن. ۱- در سوره هود، در انتهای داستان همه اقوام عبارتی هست که با "بُعداً" (دور باد) شروع میشود. "بُعْدًا لِّعَادٍ قَوْمِ هُودٍ" و ... "بُعْدًا لِّمَدْيَنَ كَمَا بَعِدَتْ ثَمُودُ". قبل و بعد از داستان قوم لوط این عبارت هست. ولی در داستان قوم لوط چنین عبارتی وجود ندارد. احتمالا برای همین است.
+<br>
+پ.ن. ۲- شاید به همین دلیل عدم انحراف اعتقادی (شدید) بوده که ابتدابه‌ساکن برای حضرت ابراهیم (ع) واضح نبوده که این قوم باید عذاب بشن و سعی کردن که عذاب رو برگردونن.
+<br>
+پ.ن. ۳- در مورد اقوام دیگر آمده است که "ملاء القوم" جلوی پیامبر ایستادند ولی در مورد قوم لوط همواره آمده است که قوم جلوی پیامبر ایستادند و هیچ جا اشاره‌ای به "ملاء القوم" نیست. ۲ تا چیز در این رابطه به ذهن بنده میاد: اول اینکه مجادلات و انحرافات تئوریک/اعتقادی مربوط به خواص و نخبگان جامعه است نه عموم مردم. عموم مردم در این زمینه پیرو هستند. دوم اینکه انحراف جنسی خود بدنه جامعه رو درگیر میکنه. برای همین خود قوم لوط مقابل پیامبر قرار میگرفتن نه یک گروه نخبگان (ملاء القوم)
+<br>
+پ.ن.۴: اگر مطلب متن درست باشد، وقتی که قوم لوط گفتند "ائْتِنَا بِعَذَابِ اللَّهِ إِن كُنتَ مِنَ الصَّادِقِينَ" (عذاب خداوند را بیاور اگر از راستگویانی)، بر خلاف اقوام دیگه که چنین جمله‌ای را گفتن، منظورشون کفر به خود خداوند نبوده، بلکه منظورشون این بوده که خداوند در این زمینه ممنوعیتی نداره (کاری با این موضوعات نداره).
+<br>
+پ.ن. ۵: اگر آیات "فَأَخْرَجْنَا مَن كَانَ فِيهَا مِنَ الْمُؤْمِنِينَ ‎﴿٣٥﴾‏ فَمَا وَجَدْنَا فِيهَا غَيْرَ بَيْتٍ مِّنَ الْمُسْلِمِينَ" در کانتکست قبل بفهمیم، مثلا میشه نتیجه گرفت که اسم یا صفت "مؤمن" به کسی تعلق میگیره که "آمنوا و عملوا الصالحات" باشه، نظر و عملش درست باشه. و اسم یا صفت "مسلم" به کسی تعلق میگیره که در نظر و عمل تسلیم حق باشه. یعنی فرق هست بین "الذین آمنوا" و "مؤمنین". در سوره مؤمنون هم میبینیم که "مؤمنون" اهل خلاف جنسی نیستن (آیه ۱ + آیات ۵تا۷).
+<br>
+پ.ن.۶: به نظرم یک نکته جالب توجه دیگه هم هست و اون اینکه داستان قوم لوط که ۷، ۸ بار در قرآن آمده، بحث یک حرام شخصی نیست. اینکه امثال این کار از لحاظ فردی حرام است آیات دیگه داره. برای حرام شخصی مثلا میگن اگر کسی فلان کار رو کرد دچار آتش میشه، یا مومن فلان کار رو نمیکنه (مثل اون آیات سوره مؤمنون که اشاره شد یا آیات مشابه در سوره معارج). این ماجرای یک "جامعه‌ای" هست که درگیر این انحراف شده. و به نظرم برای مردم مکه و مدینه اون موقع میتونسته جای سوال باشه که چرا انقدر این ماجرا رو تکرار میکنی :) مگه خبری هست؟! اقوام دیگه انحراف شرک و بت‌پرستی داشتن، اهل مکه و مدینه هم درگیر بت‌پرستی بودن، تکرار داستان اقوام دیگه لااقل از این جنبه طبیعیه. ولی چرا داستان قوم لوط هی تکرار بشه در قرآن؟!
+    </p>
+  </section>
+
+
 </body>
 </html>
