Add sections on parental influence and cultural beliefs
Added new sections discussing the themes of parental influence and the significance of cultural beliefs in the story of Joseph and his brothers.

--- a/index.html
+++ b/index.html
@@ -1115,6 +1115,25 @@ Knowing all this, if there are some people who continue living a normal, money-m
     </p>
   </section>
 
+<section>
+    <h2>بابایی بودن برادران یوسف</h2>
+    <p>برادران یوسف بیش از حد "بابایی" هستن. من به خاطر ندارم جایی بگن فلان کار صرفا بده یا خوبه و همواره اون کار رو نسبت به پدرشون میسنجیدن. حتی آخرش هم میگن یا ابانا استغفر لنا ذنوبنا ... تازه توجه کنیم که قبل از این یوسف (ع) براشون استغفار کرده بود. حتی به نظرم این فازشون رو در اون آیه ۱۳۳ سوره بقره هم میشه حس کرد. کلا فضاشون به نظرم اینجوریه که خدا و حق رو میخوان مستند کنن به پدرشون به جای اینکه پدرشون رو مستند کنن به خدا.
+<br>
+حالا وقتی همزمان میخوایم بگیم که یعقوب (ع) فرد عظیم الشانی هست ولی اینها استفاده نادرستی از این معنی میکنن، و میخوایم همزمان تاکید کنیم که همه کارها به دست خداست، اونوقت اینگونه عبارات پیچیده لازم میشه. توجه کنیم اگر به جای یعقوب (ع) یک بت سنگی یا یک نظر بی‌پایه خرافی بود، نیاز به عبارات پیچیده نبود. اینجا هم یعقوب (ع) تاکید میکنه که لا اغنی عنکم من الله من شیء و هم بعد از اون این عبارت توسط خود قرآن تاکید میشه.
+<br>
+البته در مورد اون حسی که از اون آیه‌ای که بهش اشاره کردید میگیرید، به نظرم اشکال نداره که بگیم حضرت یعقوب (ع) هم تمام تلاشش رو داره میکنه که مثل حضرت نوح (ع) فرزندانش رو نجات بده. ولی خوب خدا میدونه که اونها چقدر اصلاح‌پذیر هستن.
+<br>
+پ.ن.: به نظرم اون بیش از حد بابایی بودن رو هم میشه به مفهوم والد/اب/سوپرایگو برگردوند و هم به مفهوم نژاد (نژادپرستی) (چون اینجا اب و والدشون یکی هست. اب:سرپرستی و فرهنگ. والد: نژاد.)</p>
+  </section>
+
+
+    <section>
+    <h2>شباهت آیات ۳۹ و ۴۰ با آیات ۶۷ و ۶۸ سوره یوسف</h2>
+    <p>
+      رادران یوسف نظر پدرشون خیلی براشون مهمه. اصلا به همین خاطر یوسف (ع) رو میبرن سربه‌نیست کنن که نظر پدرشون رو بیشتر متوجه خودشون کنن. یا در موارد دیگه میبینیم که حرف پدر رو خیلی گوش میکنن. مثلا بگیم توجه‌شون به نظر پدرشون بیشتر از توجهشون به حق هست. این رو بذاریم مشابه همون که گویا شما (روان‌کاوها) بهش میگید سوپرایگو یا والد (که البته بنده در این پست اشاره کردم که در عربی لفظ اب برای اون بهتر از والد هست https://t.me/c/1153702875/45665). پس یعقوب (ع) هم که این اختلال رو در اونها میدونه، بعد از اینکه دستوری بهشون میده تاکید میکنه که لا اغنی عنکم من الله من شیء ان الحکم الا لله. یوسف (ع) هم به اون زندانی‌های هم‌بندش میگه شما به خاطر همین پیروی کورکورانه از فرهنگ (سوپرایگو/والد/اب) این بت‌ها رو میپرستید (سمیتموها انتم و آبائکم). پس در ادامه میگه که ان الحکم الا لله. در واقع در هر دو مورد این دو دسته برادران یوسف و اون زندانی‌ها نیاز داشتن که نظرشون از اب (فرهنگ) به خداوند جلب بشه. به نظرم این هماهنگ هم هست با عبارت ولکن اکثر الناس لا یعلمون که تکرار شده، چون فرهنگ چیزی هست مربوط به مردم و اکثریت مردم.
+    </p>
+  </section>
+
 
 </body>
 </html>
