--- a/index.html
+++ b/index.html
@@ -1134,6 +1134,24 @@ Knowing all this, if there are some people who continue living a normal, money-m
     </p>
   </section>
 
+  <section>
+    <h2>ورود از ابواب متفرق</h2>
+    <p>
+در مورد دستور به متفرق شدن به برادران یوسف، یک چیزی که به ذهنم میاد اینه که: فکر میکنم ما این الگو رو در قرآن داریم که وقتی ملت از حق منحرف میشن و در حق اختلاف میکنن (به طور خاص وقتی اولیای الهی رو میکشن یا تکذیب میکنن)، عواقب این کارشون تفرقه پیدا کردن هست. یعنی تفرقه پیآمد یا حتی جزا و عذاب این اقدام مردم هست. اینجا هم یک جنبه‌ش شاید این باشه که به صورت نمادین میبینیم یعقوب (ع) بین اونها تفرقه میندازه. و البته مثل جزاها و عذابهای دیگه میتونه زمینه‌ای باشه برای اصلاح و بازگشتشون. مثلا برادران یوسف گویا یه تاکیدی بر این با‌هم‌بودنشون داشتن (دو بار میگن نحن عصبه) و اینجا یعقوب (ع) برای تربیتشون اونها رو متفرق میکنه.
+<br>
+ارباب و من باب و ابواب هم هم‌آوایی خوبی دارن :) ارباب متفرق ما رو میبرن به سمت ابواب متفرق
+<br>
+      البته در مورد ابواب متفرق باید توجه کنیم که این دستور به چه افرادی داده شده. افرادی که نتونستن یوسف (ع) رو تحمل کنن و ... . خلاصه افرادی که نمیتونستن زیر بار حق برن. در فرآیند درمانی کارهایی که در حالت عادی مطلوب نیستن هم استفاده میشه. درست این بود که اونها عصبه‌ای در حمایت از یوسف (ع) باشن. وقتی از این عصبه بودنشون علیه یوسف (ع) استفاده میکنن، حالا بهتره متفرق بشن بلکه به فکر اصلاح بیفتن و برگردن. یا لااقل به خودشون و دیگران کمتر آسیب بزنن.
+    </p>
+  </section>
+
+  <section>
+    <h2>خطاب سارقان</h2>
+    <p>
+      شاید اونجا که صدا میکنن که ایتها العیر انکم لسارقون، این عبارت دقیق باشه. چون اونها در بازگشت از سفر قبل دیدن که بضاعتی که برده بودن که باش آذوقه بگیرن رو با خودشون برگردوندن. به جای اینکه بگن اشتباهی اینو برگردوندیم و بریم بدیمش بهشون، رفتن توی این فضا که با اون بضاعت برن یک بار دیگه آذوقه بگیرن. اگر این حرف درست باشه، این تازه زشت‌تر هم میشه وقتی کسایی که خودشون اینطوری هستن برگشتن گفتن که برادر بنیامین (یوسف (ع)) قبلا سرقت کرده.
+    </p>
+  </section>
+
 
 </body>
 </html>
