--- a/index.html
+++ b/index.html
@@ -1130,7 +1130,7 @@ Knowing all this, if there are some people who continue living a normal, money-m
     <section>
     <h2>شباهت آیات ۳۹ و ۴۰ با آیات ۶۷ و ۶۸ سوره یوسف</h2>
     <p>
-      رادران یوسف نظر پدرشون خیلی براشون مهمه. اصلا به همین خاطر یوسف (ع) رو میبرن سربه‌نیست کنن که نظر پدرشون رو بیشتر متوجه خودشون کنن. یا در موارد دیگه میبینیم که حرف پدر رو خیلی گوش میکنن. مثلا بگیم توجه‌شون به نظر پدرشون بیشتر از توجهشون به حق هست. این رو بذاریم مشابه همون که گویا شما (روان‌کاوها) بهش میگید سوپرایگو یا والد (که البته بنده در این پست اشاره کردم که در عربی لفظ اب برای اون بهتر از والد هست https://t.me/c/1153702875/45665). پس یعقوب (ع) هم که این اختلال رو در اونها میدونه، بعد از اینکه دستوری بهشون میده تاکید میکنه که لا اغنی عنکم من الله من شیء ان الحکم الا لله. یوسف (ع) هم به اون زندانی‌های هم‌بندش میگه شما به خاطر همین پیروی کورکورانه از فرهنگ (سوپرایگو/والد/اب) این بت‌ها رو میپرستید (سمیتموها انتم و آبائکم). پس در ادامه میگه که ان الحکم الا لله. در واقع در هر دو مورد این دو دسته برادران یوسف و اون زندانی‌ها نیاز داشتن که نظرشون از اب (فرهنگ) به خداوند جلب بشه. به نظرم این هماهنگ هم هست با عبارت ولکن اکثر الناس لا یعلمون که تکرار شده، چون فرهنگ چیزی هست مربوط به مردم و اکثریت مردم.
+      برادران یوسف نظر پدرشون خیلی براشون مهمه. اصلا به همین خاطر یوسف (ع) رو میبرن سربه‌نیست کنن که نظر پدرشون رو بیشتر متوجه خودشون کنن. یا در موارد دیگه میبینیم که حرف پدر رو خیلی گوش میکنن. مثلا بگیم توجه‌شون به نظر پدرشون بیشتر از توجهشون به حق هست. این رو بذاریم مشابه همون که گویا شما (روان‌کاوها) بهش میگید سوپرایگو یا والد (که البته بنده در این پست اشاره کردم که در عربی لفظ اب برای اون بهتر از والد هست https://t.me/c/1153702875/45665). پس یعقوب (ع) هم که این اختلال رو در اونها میدونه، بعد از اینکه دستوری بهشون میده تاکید میکنه که لا اغنی عنکم من الله من شیء ان الحکم الا لله. یوسف (ع) هم به اون زندانی‌های هم‌بندش میگه شما به خاطر همین پیروی کورکورانه از فرهنگ (سوپرایگو/والد/اب) این بت‌ها رو میپرستید (سمیتموها انتم و آبائکم). پس در ادامه میگه که ان الحکم الا لله. در واقع در هر دو مورد این دو دسته برادران یوسف و اون زندانی‌ها نیاز داشتن که نظرشون از اب (فرهنگ) به خداوند جلب بشه. به نظرم این هماهنگ هم هست با عبارت ولکن اکثر الناس لا یعلمون که تکرار شده، چون فرهنگ چیزی هست مربوط به مردم و اکثریت مردم.
     </p>
   </section>
 
@@ -1149,6 +1149,20 @@ Knowing all this, if there are some people who continue living a normal, money-m
     <h2>خطاب سارقان</h2>
     <p>
       شاید اونجا که صدا میکنن که ایتها العیر انکم لسارقون، این عبارت دقیق باشه. چون اونها در بازگشت از سفر قبل دیدن که بضاعتی که برده بودن که باش آذوقه بگیرن رو با خودشون برگردوندن. به جای اینکه بگن اشتباهی اینو برگردوندیم و بریم بدیمش بهشون، رفتن توی این فضا که با اون بضاعت برن یک بار دیگه آذوقه بگیرن. اگر این حرف درست باشه، این تازه زشت‌تر هم میشه وقتی کسایی که خودشون اینطوری هستن برگشتن گفتن که برادر بنیامین (یوسف (ع)) قبلا سرقت کرده.
+    </p>
+  </section>
+
+  <section>
+    <h2>ارتباطی بین بیانات حضرت ابراهیم (ع) در سوره شعراء و آیه ۲۵۸ سوره بقره</h2>
+    <p>
+در بیانات حضرت ابراهیم (ع) در سوره شعراء، هرجا که اونها احتمالا میتونستن تشکیک وارد کنن رو اولش هو میذاشتن برای تاکید. در این راستا در ابتدای «الَّذِي يُمِيتُنِي ثُمَّ يُحْيِينِ» هو نمیارن. در آیه ۲۵۸ سوره بقره میبینیم که اون فرد سعی داره در همین موضوع تشکیک وارد کنه که حضرت ابراهیم (ع) به طرق دیگری مبهوتش میکنن.
+    </p>
+  </section>
+
+    <section>
+    <h2>ارتباطات میان سوره ها</h2>
+    <p>
+متن قرآن در سوره های مختلف در جاهایی به هم دوخته شده است. ارتباطی که آن قسمت متن رو به قسمتی در سوره دیگر وصل میکند. مثل ارتباط تغییر خطاب از قوم به خداوند در قسمت ابراهیم (ع) در سوره شعراء و آیه ۷۵ سوره انعام. یا همین مثلال قبل در صحبت‌های حضرت ابراهیم (ع) در سوره شعراء و آیه ۲۵۸ سوره بقره.
     </p>
   </section>
 
