Refine text on connections between Quranic surahs
Updated the text in the section about connections between surahs.

--- a/index.html
+++ b/index.html
@@ -1162,7 +1162,7 @@ Knowing all this, if there are some people who continue living a normal, money-m
     <section>
     <h2>ارتباطات میان سوره ها</h2>
     <p>
-متن قرآن در سوره های مختلف در جاهایی به هم دوخته شده است. ارتباطی که آن قسمت متن رو به قسمتی در سوره دیگر وصل میکند. مثل ارتباط تغییر خطاب از قوم به خداوند در قسمت ابراهیم (ع) در سوره شعراء و آیه ۷۵ سوره انعام. یا همین مثلال قبل در صحبت‌های حضرت ابراهیم (ع) در سوره شعراء و آیه ۲۵۸ سوره بقره.
+متن قرآن در سوره های مختلف در جاهایی به هم دوخته شده است. ارتباطی که آن قسمت متن رو به قسمتی در سوره دیگر وصل میکند. مثل ارتباط تغییر خطاب از قوم به خداوند در قسمت ابراهیم (ع) در سوره شعراء و آیه ۷۵ سوره انعام. یا همین مثال قبل در صحبت‌های حضرت ابراهیم (ع) در سوره شعراء و آیه ۲۵۸ سوره بقره. گویا مثل راهی ما رو از اینجا به اونجا منتقل میکنه. یعنی سوره ها یک سری پکیج کنار هم نیستن. از نقاطی به هم وصل هستن.
     </p>
   </section>
 
