Add section for divine appointment history download

--- a/index.html
+++ b/index.html
@@ -1167,5 +1167,11 @@ Knowing all this, if there are some people who continue living a normal, money-m
   </section>
 
 
+  <section>
+  <h2>تاریخ خلافت بشر یا تاریخ عهد الهی</h2>
+  <a href="History_of_Divine_Appointment.pptx">لینک داونلود</a>
+ </section>
+
+
 </body>
 </html>
