--- a/index.html
+++ b/index.html
@@ -644,6 +644,13 @@
   </section>
 
   <section>
+    <h2>سوالات برای فهم انسان کامل (به نظرم بهتره بگیم خلیفه الله بالفعل)</h2>
+    <p>
+  دعوت میکنم به این سوالات فکر کنیم: انسان وقتی که رشد میکنه، کامل و کامل‌تر میشه یعنی چجوری میشه؟ اگر کامل‌تر شدن یعنی تقرب به خداوند، این یعنی چجوری شدن؟ یعنی علم انسان چجوری میشه؟ قدرت انسان چجوری میشه؟ چه صفاتی پیدا میکنه؟ اگر انسان کامل بشه، حالا این انسان کامل چجور علم و قدرتی داره؟ چجور صفاتی داره؟
+</p>
+  </section>
+
+  <section>
     <h2>هو و الله</h2>
     <p>راستش یه ربط کلی به ذهنم میاد ولی چیز خیلی مشخصی در مورد منظورتون نمیدونم🙏 اگر در رابطه با اون سوالتون در مورد استفاده خداوند از ضمیر مفرد و جمع برای خودش منظورتون هست. من در حد سواد خودم (که بسیار کم و غیرقابل اعتماد هست)، یه همچین چیزایی میدونم که گویا ما در فهم خودمون از خدا یک ذات داریم که در قرآن با "هو" ازش یاد میشه و یک اسماء و صفات که با "الله" ازش یاد میشه. حالا اونجاهایی که خدا با ضمیر مفرد صحبت میکنه، این بیشتر متناسب هست با اون  "هو"، وقتی با ضمیر جمع صحبت میکنه، بیشتر متناسب هست با "الله". خلاصه وقتی خدا ضمیر مفرد به کار میبره، خیلی بحث رو شخصی کرده 😊 انّی جاعل، روحی، جنّتی و ...
 <br>
@@ -1114,6 +1121,147 @@ Knowing all this, if there are some people who continue living a normal, money-m
 پ.ن.۶: به نظرم یک نکته جالب توجه دیگه هم هست و اون اینکه داستان قوم لوط که ۷، ۸ بار در قرآن آمده، بحث یک حرام شخصی نیست. اینکه امثال این کار از لحاظ فردی حرام است آیات دیگه داره. برای حرام شخصی مثلا میگن اگر کسی فلان کار رو کرد دچار آتش میشه، یا مومن فلان کار رو نمیکنه (مثل اون آیات سوره مؤمنون که اشاره شد یا آیات مشابه در سوره معارج). این ماجرای یک "جامعه‌ای" هست که درگیر این انحراف شده. و به نظرم برای مردم مکه و مدینه اون موقع میتونسته جای سوال باشه که چرا انقدر این ماجرا رو تکرار میکنی :) مگه خبری هست؟! اقوام دیگه انحراف شرک و بت‌پرستی داشتن، اهل مکه و مدینه هم درگیر بت‌پرستی بودن، تکرار داستان اقوام دیگه لااقل از این جنبه طبیعیه. ولی چرا داستان قوم لوط هی تکرار بشه در قرآن؟!
     </p>
   </section>
+
+<h2>سناریویی درباره احوال قوم لوط</h2>
+    <p> بنده یک پخت و پزی کردم  ببنید نظرتون چی هست:
+<br>
+قریه لوط به صورت طبیعی اینطور نشده. از یک جایی به بعد قانون گذاشتن که این شهر مخصوص همجنسگرایانه (از هر دو جنس). یا حتی میشه راحت‌تر تصور کرد که یه سری افراد رفتن یک جایی اصلا شهری مخصوص این موضوع راه انداختن. اینطور این ۴ تا گزاره راحت توجیه میشن:
+<br>
+۱- "مردان با زنان ارتباط نمیگرفتن" (أَتَأْتُونَ الذُّكْرَانَ مِنَ الْعَالَمِينَ ‎﴿١٦٥﴾ وَتَذَرُونَ مَا خَلَقَ لَكُمْ رَبُّكُم مِّنْ أَزْوَاجِكُم) 
+<br>
+۲- و هم "حق نداشتن با زنان ارتباط بگیرن" (طبق قوانینشون) (لَقَدْ عَلِمْتَ مَا لَنَا فِي بَنَاتِكَ مِنْ حَقٍّ)
+<br>
+۳- و هم اینکه زنان هم مستحق عذاب بودن. توجه کنیم که اگر داستان رو صرفا در مورد انحرافات مردان بدونیم، چطور میتونیم عذاب شدن زنان رو توجیه کنیم؟
+<br>
+۴- اگر جایی میخوان بزنن توی شهوت‌رانی بی‌قید و بند (و توجه به بدن) چرا باز یک محدودیت میذارن که کسی با غیرهمجنس نمیتونه رابطه داشته باشه؟
+<br>
+پس قانون بوده که اینجا مرد و زن با هم ارتباطی ندارن. و از این جهت هم هست که کسی که اینطور نمیخواد میتونه بره یا بخواد مزاحمت ایجاد کنه قاعدتا بیرونش میکنیم ("أَخْرِجُوهُم مِّن قَرْيَتِكُمْ ۖ إِنَّهُمْ أُنَاسٌ يَتَطَهَّرُونَ" و "أَخْرِجُوا آلَ لُوطٍ مِّن قَرْيَتِكُمْ ۖ إِنَّهُمْ أُنَاسٌ يَتَطَهَّرُونَ"). یک نکته‌ای هم اینجا هست به نظرم که قوم لوط (مثل قوم عاد) هیچ جا پیامبرشون رو به کشتن تهدید نمیکنن یا اقدامی در این رابطه توی قرآن گزارش نشده. اگر هم کسی میاد تو این شهر طبق قوانین خودشون باش رفتار میکردن و این توجیه میکنه این رو که اومدن سراغ مهمانان لوط (اینجا این شهره با این قوانین خاص).
+<br>
+پس موضوع و محور شهر اصلا یک امر اعتقادی (فلان بت یا ...) نبوده. موضوع و محور شهر این عمل انحرافی بوده. افراد ممکنه توش طرز تفکرات مختلفی داشته باشن.
+<br>
+برای همین پیامبری که میاد در مورد موضوع محوری این شهر که از جنس عمل هست صحبت میکنه، نه اعتقادات.
+<br>
+بحث لوط بحث تئوریک نبوده که نخبگان (ملاء القوم) بخوان جواب بدن. بحث عملی دم دستی بوده که همه اهالی اونجا درگیرش بودن. پس خود مردم کف شهر باش مجادله میکنن.
+<br>
+در دفاع از کارشون اشاره به آباء جا نداشته چون خودشون اولین در این خلاف بودن. به علاوه این عمل از روی اعتقادی نبوده که بخوان به سنت گذشتگان بهش پایبند باشن (مثل قربانی کردن برای بت‌ها و ...). صرفا عمل بر اساس هوای نفس بوده، نه برگرفته از اعتقادی سنتی. و به علاوه اشاره به پدران یک جور علیه خودشون هم بوده که راه توالد رو قطع کرده بودن؛ بالاخره توی اذهان تکرار میکرده که خودتون از کجا اومدید.
+<br>
+در موردشون دور باد گفته نشده و حتی در حالت عذاب مخاطب هم واقع شدن از این جهت که درگیری تئوریک مستقیم با خدا نداشتن. حتی میشه تصور کرد برخیشون مدعی بودن که چنین چیزی خلاف خواست خدا نیست و خدا به این موضوعات کاری نداره (همه راضین، خدا چرا ناراضی باشه).
+<br>
+ابراهیم (ع) هم چون متمرکز روی زدودن شرک بوده، براش روشن نبوده الآن اینا (که محور جماعتشون بت‌پرستی نیست) باید نابود بشن. توجه کنیم که از حضرت ابراهیم (ع) هم مثل حضرت نوح (ع) یک نمونه تذکر عملی غیرعبادی به قومشون ذکر نشده. حضرت نوح (ع) متمرکز روی نفی شرک بودن و اشاره اجمالی به پاداش‌های خدا. بعد در ماجرای حضرت ابراهیم (ع) یک مرحله جلوتر رو داریم که نفی شرک هست و توصیف بهشت و جهنم با جزئیات بیشتر و اشاره به صلات و معرفی حج.
+<br>
+چرا مخاطب همواره مردانند؟ مردان قوام قوم بودن (این رو از آیه ۱۱ سوره حجرات هم میشه برداشت کرد)، پس اگر جلوی انحراف مردان گرفته میشده، کل قوم درست میشده. به عبارت دیگه اگر قانون‌گزاری رو یک روحیه مردانه بدونیم، میشه مردان رو مقصرتر در گذاشتن و اعمال چنین قانونی دونست. قاعدتا یک قدرت فیزیکی هم لازم بوده که اعمالش کنن که این هم بیشتر متناسب هست با مردان و این متناسب هست با اون جمله حضرت لوط (ع) "لَوْ أَنَّ لِي بِكُمْ قُوَّةً أَوْ آوِي إِلَىٰ رُكْنٍ شَدِيدٍ". حیای قرآن هم همواره حصن (قلعه) زنان رو حفظ میکنه و مثلا میبینیم که همه زنان شوهردار رو به اسم شوهر صدا میکنه امراءت عمران، (حتی وقتی زن و شوهر کاملا مخالف هم بودن) امراءت لوط، امراءت فرعون. تنها زنی که به اسم مستقیم توی قرآن اومده حضرت مریم (ع) هست. پس در ماجرای قوم لوط در قرآن هم میبینیم که حضرت لوط (ع) خطاب مستقیم رو متوجه زنان نمیکنن. ولی ما از اونچه بر زن لوط گذشت میفهمیم که زنان خلاف‌کار هم بودن.
+<br>
+شاید هم به خاطر فرهنگ افتضاح و فضای بی‌شرمی‌ای که درست کرده بودن، خیلی از آدمای سالم به مرور خودشون از شهر رفتن جاهای دیگه و این هم به این (تقریبا) خالص شدنه کمک کرده. شاید از "وَتَأْتُونَ فِي نَادِيكُمُ الْمُنكَرَ" بتونیم این استفاده رو هم بکنیم.
+<br>
+  شاید عنوان موتفکه برای شهر قوم لوط هم این تناسب رو داشته باشه که چون شهر ارگانیکی نبوده، مصنوعی بوده، توالدی صورت نمیگرفته که طبیعی ادامه‌دار باشه. حتی از ریشه و آباء خودش هم یک جور قطع بودن، به افک شهر بوده یا به قول امروزیا شهر فیک بوده. یک شهر بدون استقرار بوده. به علاوه لغت موتفکه و زیر و رو کردن خلقت خدا با قسمتی از عذابشون که زیر و رو شدن بوده هم موافقه.
+<br>
+من سعی کردم یک مدل مینیمال ارائه کنم که با همه گزاره‌های مطرح شده در قرآن (در ذهنم) هماهنگ باشه. اگر عدم هماهنگی‌ای میبینید لطفا بم اطلاع بدید (یا اینجا یا خصوصی🙏). همینطور اگر چیزی از جزئیات رو میشه حذف کرد و به مدلی مینیمال‌تر و هماهنگ با آیات رسید بفرمایید. 
+<br>
+نکته‌ای که هنوز نتونستم توجیه قانع کننده‌ای براش پیدا کنم استفاده از لغت غابر برای زن لوط هست. ریشه غبر کلا ۸ بار در قرآن اومده، که ۷ بارش برای زن لوط هست که میفرماید او از غابرین بود. و فقط هم همین لفظ برای زن لوط اومده.
+<br>
+-----------------------
+<br>
+برای تقریب به ذهن، الآن هم قوانین انحرافی در برخی شهرها میذارن که جاهای دیگه محدودیت وجود داره. مثلا Las Vegas در قیاس با شهرهای دیگه امریکا. البته الحمدلله اصلا نزدیک شرایط قوم لوط نیست. صرفا برای اینکه ببینیم انسان‌ها گاهی طغیان میکنن و به این فکر میفتن که شهری رو براساس چیزی که ممنوعه تشکیل بدن.
+<br>
+بنده توی اعلامیه برنامه‌های منحرفین جنسی (همجنسگرایان و ....) در شهرهای غربی هم دیدم که برای حضور به قول خودشون cishet (cisgender hetrosexual) (یه جور معادل همون "اناس یتطهرون" :) ) محدودیت قائل میشن یا به هرحال از حضورشون استقبال نمیشه.
+<br>
+به نظرم از رفتار قوم لوط و هم این ورژن‌های جدیدشون میشه نتیجه‌گیری کرد که خودشون هم میفهمن که این انحراف رو با زور کردن قانونی (محدود کردن آدمای سالم) میشه نگهش داشت و گرنه فشار طبیعت و مردم سالم اجازه چنین چیزی رو اتوماتیک نمیده.
+    </p>
+  </section>
+
+    <section>
+    <h2>شباهت قوم لوط و جوامع امروزی</h2>
+    <p>البته به نظر منم لازم نیست همه اهالی قریه اینجوری باشن. به نظرم میشه فرض کرد عده‌ای این‌کاره نیستن ولی این رو مجاز میدونن. حتی میشه فرض کرد عده‌ای خیلی براشون اوکی هم نباشه ولی اونقدر منفعل و هماهنگ با محیط باشن که حتی افتضاحاتی مثل تعرض به خانه لوط رخ بده و کسی دفاع قابل بیانی نکنه. خلاصه کسی مقاومتی در مقابل اینها نمیکنه. به نظر منم تناظری که آقا/خانم مطرح میکنه قابل توجهه، ولی برای اینکه همه گزاره‌هایی که در قرآن اومده رو بتونیم توجیه کنیم به نظرم نیاز داریم یک حالت اکستریم رو تصور کنیم، یک چیزی مثل اون قانون‌گزاری که عرض کردم. یا فرهنگی چنان غالب که مثل قانون نانوشته عمل کنه. 
+<br>
+به نظرم در راستای صحبت‌های آقا/خانم خوبه به این نکات هم توجه کنیم که مثلا این انحراف رو رسما آوردن جزء "حقوق بشر". یعنی default اینه که کسی میتونه اینطور باشه. پس اگر کسی اعتراض کنه، اونه که داره توهین و بی‌احترامی میکنه. به نظرم همه متدینین دنیا باید احساس خطر شدیدی از این رسمیت بکنن. گرچه خیلی جلو اومدن ولی بالاخره باید تلاش کرد تا برگردن. در همین امتداد میشه تصور کرد که در برخی کشورهای غربی اگر فرضا کسی بچه‌ش رو خیلی مشخص ضد این موضوعات تربیت کنه و بچه ظهور و بروز قابل توجهی داشته باشه، جریاناتی راه بیفتن و به دلیل عدم تربیت صحیح بچه توسط خانواده (عدم هماهنگی با "حقوق بشر")، سعی کنن بچه رو از دستشون خارج کنن یا دردسرهای دیگه براشون درست کنن (یعنی تعرض به یک خانه و خانواده در تناظر با تعرض به خانه لوط).
+<br>
+کلا به نظر بنده این مهمه که افراد متدین در نظر داشته باشن که در دو درگیری مشخص هستن (در طول تاریخ، از ابتدای خلقت آدم): یکی درگیری از جنس قتل و غارت و یکی درگیری از جنس از بین بردن خانواده و گسترش خلاف‌های جنسی. دو درگیری اصلی که شیطان به صورت فعال درش حضور داره.</p>
+  </section>
+
+  <section>
+    <h2>زن لوط از غابرین</h2>
+    <p>
+  منم دنبال اینکه گناه زن لوط چی بوده نیستم. نکته بنده این هست که ریشه غبر کلا ۸ بار در قرآن اومده و ۷ بارش در مورد زن لوط هست. و هی تکرار هم میشه. یعنی مثلا تنوع نداره که یک بار بگه از ظالمین بود، یک بار بگه از کافرین بود و ...، ۷ بار میگه از غابرین بود. خوب این به نظرم کاملا نظر رو جلب میکنه که این ماجرای کاربرد مکرر غابر در این یک مورد خاص چیه. ممکنه حتی کسی توجیهی بیاره که مربوط به داستان لوط هم نباشه، ولی در هر صورت به نظرم متن خودش آدم رو تشویق میکنه که پیگیری کنه.
+<br>
+      در راستای decode کردن غابر برای زن لوط:
+<br>
+ما در این صحنه زن ابراهیم (ع) رو داریم که خندان (ضَحِكَتْ) و بشارت گرفته (بَشَّرْنَاهَا) است. در مقابل زن لوط رو داریم که غابر هست.
+<br>
+ما این دوگانه (ریشه‌ها) رو کنار هم در سوره عبس هم داریم:
+<br>
+وُجُوهٌ يَوْمَئِذٍ مُّسْفِرَةٌ ‎﴿٣٨﴾‏ ضَاحِكَةٌ مُّسْتَبْشِرَةٌ ‎﴿٣٩﴾‏ وَوُجُوهٌ يَوْمَئِذٍ عَلَيْهَا غَبَرَةٌ ‎﴿٤٠﴾‏ تَرْهَقُهَا قَتَرَةٌ 
+<br>
+گویا اونروز برای زن ابراهیم (ع) و زن لوط (ع) مشابه یک روز حسابرسی هم بوده.
+<br>
+البته کاربرد مکرر و انحصاری کلمه غابر هنوز نیاز به توضیح داره. چون این نکته قبلی، یک کاربرد غابر هم براش کفایت میکرد.
+    </p>
+  </section>
+
+   <section>
+    <h2>دختران لوط</h2>
+    <p>
+ در مورد "دختران لوط" (اگر منظور خود دخترانش باشه و نه کل دختران قوم که بعضی مفسرین مطرح کردن: یعنی یک حالت پدرانه‌ای داره به این مردای قوم میگه برید با زوج خودتون که دختران قوم هستن ازدواج کنید، این چه فازیه برداشتید) هم میشه شرایط معمولی‌تری رو تصور کرد. احتمالا اینها مدت‌ها داشتن اونجا زندگی میکردن. کلی تو خونه با هم در مورد این شرایط صحبت کردن. به فکر راه‌کارهایی هم برای اصلاح قوم و هم برای شرایط خطر افتادن. حتی میشه تصور کرد که این اولین مورد نبوده که براشون مهمون اومده بوده. از عبارت "قَالُوا أَوَلَمْ نَنْهَكَ عَنِ الْعَالَمِينَ" به نظرم راحت میشه این برداشت رو کرد که اتفاقات مشابهی هم بوده. ‎یعنی خلاصه از قبل با هم همدل و هماهنگ بودن. در قرآن فقط صحبت لوط (ع) رو داریم، دلیلی برای عدم هماهنگ بودن با "دخترانش" رو نداریم.
+<br>
+      در واقع به نظرم کاربرد اصلی اون جمله اینه که شدت تجاوزکاری قوم رو نشون بده که با اینکه دسترسی (راحت) به غیرهمجنس داشتن، باز با اصرار قبول نمیکردن.
+<br>
+به نظرم کماکان میشه تصور کرد که زنان هم انحراف دارن، ولی لوط (ع) توی اون صحنه اون مردا رو دعوت میکنه که برن سراغ زن‌ها. اگر ناراحتی از این هست که لوط (ع) به یک سری زن خلافکار بگه بناتی، به نظرم خیلی مشکلی نیست. در جاهای مختلف از این اقوام منحرف "اخ" (برادر) اون پیامبر یاد شده. "الی عاد اخاهم هودا، و الی مدین اخاهم شعیبا و ...، اذکر اخا عاد"، و .
+<br>
+البته در کل همونطور که عرض کردم، بنده هم نیازی نمیبینم که بگیم اینها دختران مستقیم خود لوط (ع) نبودن. همونطور که گفتم، جایی از قرآن اشاره‌ای به این نداریم که دخترا هماهنگ نبودن. ممکنه از قبل با هم هماهنگ کرده باشن.
+    </p>
+  </section>
+
+  <section>
+  <h2>ضیف ابراهیم</h2>
+  <p>حالا که داریم در مورد جنبه‌های مختلف داستان فکر میکنیم به نظرم به این هم فکر کنیم که ما اینجا دو جور برخورد با مهمان رو هم داریم میبینیم: یکی بسیار با احترام و پذیرایی (دو بار در قرآن میگه براشون گوساله‌ای (عجل) رو آماده کرد که بخورن. یک بار میگه گوساله چاق، یکبار هم میگه گوساله بریان). و یک جا هم میبینیم که برای مهمان هیچ حرمتی قائل نیستن. چه برداشت‌هایی از این contrast میشه کرد؟
+<br>
+دوبار این ماجرا در قرآن به عنوان ماجرای "مهمانان ابراهیم" ازش یاد شده. نه مثلا ماجرای اعطای فرزند به ابراهیم (ع) یا عذاب قوم لوط.
+<br>
+ وَنَبِّئْهُمْ عَن ضَيْفِ إِبْرَاهِيمَ ‎
+    <br>
+هَلْ أَتَاكَ حَدِيثُ ضَيْفِ إِبْرَاهِيمَ الْمُكْرَمِينَ
+<br>
+کلا لغت ضیف هم تقریبا لغت انحصاری این داستان هست. این ریشه رو فقط یکبار دیگه داریم در داستان موسی (ع) و اون عبد که در اون شهر مهمانشون نکردن.
+<br>
+نحوه تعریف داستان در سوره ذاریات هم به نظرم اینطور هست که گویا اصل هماهنگی باید با ابراهیم (ع) میشده (فقط صحبت از ابراهیم (ع) هست و بعد اجرای عذاب. صحبتی از لوط (ع) نیست. فقط میگه مومنینی که اونجا بودن رو خارج کردیم.) شاید لوط (ع) کارگزار ابراهیم (ع) توی اون شهر بوده.
+<br>
+نظرتون چیه که بگیم:
+<br>
+این مهمان‌ها اگرچه با برنامه قبلی اومدن، ولی نحوه اومدنشون فرصتی رو ایجاد کرده که افراد نشون بدن اون برنامه‌ای که براشون ریخته شده درست بوده.
+<br>
+(عمدا) به صورت آدم معمولی میان پیش ابراهیم (ع) و ابراهیم (ع) با مهمان‌نوازی خوبی که ازشون میکنه نشون میده به خوبی اهل اکرام و اطعام یک‌‌طرفه هست. پس شایستگی‌ش رو برای بچه‌دار شدن هماهنگ با برنامه‌ای که از قبل بود نشون میده.
+<br>
+به صورت آدم معمولی میرن در خانه لوط (ع) در قوم لوط. اینطوری این فرصت ایجاد میشه که قوم لوط بی‌شرمی متجاوزانه‌شون رو به وضوح به نمایش میذارن و نشون میدن که لایق اون برنامه از پیش ریخته شده (عذاب) هستن.
+<br>
+شاید این یک مقدار توضیح بده که چرا در قرآن ۲بار این ماجرا به عنوان ماجرای "مهمانان ابراهیم" ازش یاد شده (نه مثلا ماجرای فرزنددار شدن ابراهیم (ع) یا عذاب قوم لوط). و چرا در قرآن تاکید شده روی مهمان‌نوازی خوب ابراهیم (ع) و چرا تاکید شده روی رفتار قوم لوط در مورد این افراد.
+<br>
+با این سناریوی آمدن رسولان، در هر دو این موارد گویا خود افراد، ابراهیم (ع) و قوم لوط، در انتها هم زیر برنامه‌ای که براشون نوشته شده بود رو امضا میکنن. به قول معروف خودشون زیر حکمشون مهر تایید زدن. راحت قابل فرض هست که هر دو این موارد بدون اومدن اینچنینی ملائکه انجام بشه.
+<br>
+</p>
+  </section>
+
+<section>
+    <h2>مهمان و کودک</h2>
+    <p>
+دقیقا منم داشتم به این فکر میکردم. شاید داریم یک ارتباطی رو بین روحیه بچه‌داری و روحیه مهمان‌داری میبینیم.
+<br>
+در داستان موسی (ع) و اون عبد توی اون شهر که مهمانشون نکردن، اونا نگران این بودن که اگر گنج اون یتیمان مشخص بشه، مردم اون شهر رعایت اونها رو نخواهند کرد (گنج رو بالا میکشن و ...) و خلاصه نگرانی هست از آینده اون دو تا بچه یتیم. در داستان قوم لوط هم که اونا کلا راه به وجود اومدن بچه رو قطع کرده بودن و حرمت مهمون رو هم نگه‌نمیداشتن.
+<br>
+در مقابل ابراهیم (ع) که اینطور مهمان‌نوازه، بهش بچه داده میشه.
+<br>
+شاید بتونیم بگیم بچه هم مثل مهمانه، باید ازش پذیرایی بشه و باش خوب برخورد بشه. نه در حالت بده و بستان چون هر دو اونها در موضع ضعف هستن و لزوما کار خاصی نمیتونن بکنن. یک اطعام و اکرام یک‌طرفه. شاید بگیم این دو تا روحیه/فرهنگ با هم مرتبطن. اونایی که اهل مهمون نوازین، اهل بچه هم هستن.
+ </p>
+  </section>  
+
+  <section>
+    <h2>کشتن کفار توسط پیامبر</h2>
+    <p>بین این اقوام فقط یک قوم هست که موقع عذابشون مورد خطاب مستقیم خداوند قرار گرفته (سوره قمر) و فقط همون قوم هست که بعد از عذابشون "بُعدا" (دور باد) گفته نشده (سوره هود). و این دقیقا همون قومی هست که وقتی ملائکه میان میگن میخوایم عذابشون کنیم، ابراهیم (ع) راه‌دستش نبوده. این فهم اولیه اعجاب آور ابراهیم (ع) رو میرسونه.</p>
+  </section>
+
+<section>
+    <h2>تشخیص دقیق ابراهیم (ع) </h2>
+    <p>من یه موقع داشتم فکر میکردم که: برای یک پیامبر سخت‌ترین کار (از جنبه‌ای) کشتن/مردن یک کافر است. چون تصور کنید یکی وظیفه خودش میدونه که بیاد کمک کنه ملت ایمان بیارن، بعد این افراد  بدون ایمان آوردن از دنیا برن. واقعا نیاز داره به این قطعیت برسه که کار دیگری نمیشه کرد، و بلکه حضور این فرد باعث کفر بیشتری میشه.</p>
+  </section>
+
 
 <section>
     <h2>بابایی بودن برادران یوسف</h2>
