--- a/index.html
+++ b/index.html
@@ -1122,6 +1122,7 @@ Knowing all this, if there are some people who continue living a normal, money-m
     </p>
   </section>
 
+<section>
 <h2>سناریویی درباره احوال قوم لوط</h2>
     <p> بنده یک پخت و پزی کردم  ببنید نظرتون چی هست:
 <br>
