--- a/index.html
+++ b/index.html
@@ -1320,6 +1320,12 @@ Knowing all this, if there are some people who continue living a normal, money-m
   <h2>تاریخ خلافت بشر یا تاریخ عهد الهی</h2>
   <a href="History_of_Divine_Appointment.pptx">لینک داونلود</a>
  </section>
+  
+
+    <section>
+    <h2>ارتباطات آیات در مورد وحی به حواریون</h2>
+    <p>سوره آل‌عمران آیه ۵۲ و سوره مائده آیه ۱۱۱ خیلی شبیه اند. شاید یک برداشت این باشد که وحی به حواریون به واسطه عیسی (ع) بوده است. یعنی عیسی (ع) خود جزء واسئط وحی است.</p>
+  </section>
 
 
 </body>
