--- a/index.html
+++ b/index.html
@@ -1325,7 +1325,7 @@ Knowing all this, if there are some people who continue living a normal, money-m
     <section>
     <h2>ارتباطات آیات در مورد وحی به حواریون</h2>
     <p>
-      سوره آل‌عمران آیه ۵۲ و سوره مائده آیه ۱۱۱ خیلی شبیه اند. شاید یک برداشت این باشد که وحی به حواریون به واسطه عیسی (ع) بوده است. یعنی عیسی (ع) خود جزء واسئط وحی است.
+      سوره آل‌عمران آیه ۵۲ و سوره مائده آیه ۱۱۱ خیلی شبیه اند. شاید یک برداشت این باشد که وحی به حواریون به واسطه عیسی (ع) بوده است. یعنی عیسی (ع) خود جزء وسائط وحی است.
     </p>
   </section>
 
